[project]
name = "yap"
version = "0.1.0"
description = ""
authors = [
    {name = "amnesiawho",email = "92972232+AmnesiaXxXxX@users.noreply.github.com"}
]

readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "tgcrypto (>=1.2.5,<2.0.0)",
    "pyrofork (>=2.3.61,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]
packages = [
    { include = "yap", from = "src" }
]

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
app = "app:run"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
